MFC r271720:

If fgets(3) fails in getbounds(), show strerror(3) if not an EOF. Also fix a
  FILE* leak in getbounds().

PR:		192032

Former-commit-id: a83ae7e5a242dd267069589e816186b1b5a8f55d